Ver1.2.4 QAM(dot)그래프 라이브러리 제작, 적용완료  ,엑셀에 @기록되던거 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         </activity>
         <activity android:name=".TerminalActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".ReadActivity"></activity>
+        <!--<activity android:name=".ReadActivity" />-->
+        <activity android:name=".dotActivity"></activity>
     </application>
 
 </manifest>
