--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,11 @@ android {
     }
 
 }
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 
 dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -42,4 +47,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.akexorcist:bluetoothspp:1.0.0'
     compile fileTree(include: '*.jar', dir: 'libs')
+    compile 'kr.edcan.dispersionchart:dispersion-chart:1.0@aar'
+
 }
+
+
