Ver 1.2.5 삼투솔 다녀왔습니다 스미마셍, bt연동

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.akexorcist:bluetoothspp:1.0.0'
     compile fileTree(include: '*.jar', dir: 'libs')
     compile 'kr.edcan.dispersionchart:dispersion-chart:1.0@aar'
+    compile 'com.inuker.bluetooth:library:1.1.3'
 
 }
 
