--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ExcelActivity">
+        <activity android:name=".dotActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
         <activity android:name=".TerminalActivity" />
         <activity android:name=".MainActivity" />
         <!--<activity android:name=".ReadActivity" />-->
-        <activity android:name=".dotActivity"></activity>
+        <activity android:name=".ExcelActivity"></activity>
     </application>
 
 </manifest>
